[package]
name = "in-mem-rest-api"
description = "Rest API storing posted data in memory"
authors = ["Henning Langhorst"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["full"] }
warp = "0.3"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }